# BurntBeatsV3

./: .dockerignore  .env.example  .env.local  .eslintrc.cjs  .gitignore  .gitignore.consolidated  .replit  .replit.nix  App.tsx  BUTTON_FIXES_SUMMARY.md  Branding Voice Guide  Business Summary  CI_CD_COMPLETION_REPORT.md  CI_CD_SETUP.md  CLEANUP_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_CHECKLIST.md  DUAL_REPL_SETUP.md  Dockerfile  GITIGNORE_CLEANUP_REPORT.md  PRODUCTION_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  Project HQ  README.md  REPLIT_ASSISTANT_CHECKLIST.md  REPLIT_DEPLOYMENT_GUIDE.md  REPLIT_DEPLOYMENT_TODO.md  SONG_CREATION_DEMO.md  app.yaml  backend-compatibility-summary.md  build-client.js  build-fix.cjs  build-production  build-react-properly.cjs  build-real.cjs  (+108 more)
Retrieval-based-Voice-Conversion-WebUI/: requirements.txt
attached_assets/: 1_1_1_1752353452844.afpk  1_1_1_1752353452845.flac  1_1_2_1752353452847.afpk  1_1_2_1752353452848.flac  Burnt Beats Site Model_1751204529965.txt  BurntBeats file structure_1752955319044.txt  Music editor and structure _1752955396512.txt  Pasted--0-bytes-rage-midi-groove-dataset-groove-Icon-0-bytes-rage-midi-groove-dataset-groove-drummer8-Ic-1753170525001_1753170525002.txt  Pasted--Starting-production-deployment-Created-minimal-p-1753066644662_1753066644664.txt  Pasted--Starting-production-deployment-Created-minimal-p-1753066973820_1753066973821.txt  Pasted-07-20-19-47-33-at-home-runner-workspace-dist-node-modules-express-lib-router-index-js-284-15-07-2-1753061683847_1753061683849.txt  Pasted-BURNT-BEATS-USER-LICENSE-AGREEMENT-Effective-Immediately-Upon-Song-Generation-This-License-Agreem-1751865833395_1751865833397.txt  Pricing_1750430184192.txt  Tier System_1750430193470.txt  (+26 more)
(+208 files in other folders)
