[project]
name = "Burnt-Beats"
version = "0.1.0"
description = "Nix workspace for REPL-based music processing and machine learning"
authors = [
    {name = "Sammy Jernigan", email = "sammyjernigan@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.116.1",
    "mido>=1.3.3",
    "mingus>=0.6.1",
    "music21>=9.7.1",
    "numpy>=2.3.0",
    "pretty-midi>=0.2.10",
    "pydantic>=2.11.7",
    "pyfluidsynth>=1.3.4",
    "python-rtmidi>=1.5.8",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "tensorflow>=2.14.0",
    "uvicorn>=0.35.0",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/yourusername/repl-nix-workspace"
Documentation = "https://example.com/docs"

